--- a/packages/frontend/src/styles/globals.css
+++ b/packages/frontend/src/styles/globals.css
@@ -96,6 +96,13 @@
     @apply border-red-300 dark:border-te-orange;
   }
 
+  .badge-warning {
+    @apply badge;
+    @apply bg-yellow-50 dark:bg-te-gray-900;
+    @apply text-yellow-700 dark:text-te-yellow;
+    @apply border-yellow-300 dark:border-te-yellow;
+  }
+
   .badge-neutral {
     @apply badge;
     @apply bg-te-gray-100 dark:bg-te-gray-800;
